# mslg-spa-2026

./: .gitignore  LICENSE  README.md  main.py  predicciones_e1_val.tsv  pyproject.toml  reglas_sintaxis_lsm.md  workflow_finetuning_bart_glosas.md
enfoque1/: codigo.py  data.txt
enfoque2/: config.py  data_loader.py  evaluate.py  submit.py  train.py
enfoque3/: HALLAZGOS.md  config.py  data_loader.py  embedding_index.py  evaluator.py  experiment_runner.py  generate_submission.py  main.py  ollama_client.py  post_processor.py  prompt_builder.py
enfoque3/data/: MSLG_SPA_synthetic.txt  MSLG_SPA_train.txt
enfoque3/enfoque3.1/: anthropic_client.py  config.py  data_loader.py  embedding_index.py  evaluator.py  experiment_runner.py  generate_submission.py  main.py  post_processor.py  prompt_builder.py
enfoque3/results/: few-shot-10_metrics.json  few-shot-10_results.csv  few-shot-15_metrics.json  few-shot-15_results.csv  few-shot-3_metrics.json  (+14 more)
enfoque4/: __init__.py  config.py  experiment_runner.py  hybrid_index.py  lsm_postprocessor.py  main.py  prompt_builder.py  rule_engine.py
enfoque5/: augment.py  config.py  evaluate.py  submit.py  train.py
enfoque6/: config.py  data_loader.py  embedding_index.py  evaluator.py  experiment_runner.py  main.py  ollama_client.py  post_processor.py  prompt_builder.py  rules_engine.py
enfoque7/: .env.example  anthropic_client.py  config.py  data_loader.py  embedding_index.py  evaluator.py  experiment_runner.py  main.py  post_processor.py  prompt_builder.py
enfoque8/: config.py  experiment_runner.py  main.py  prompt_builder.py
(+158 files in other folders)
