[project]
name = "mslg-spa-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "spacy>=3.7",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "requests>=2.31",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "transformers>=4.40",
    "torch>=2.2",
    "sacrebleu>=2.4",
    "accelerate>=0.30",
    "pandas>=3.0.2",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]
